--- a/巨人/選手.html
+++ b/巨人/選手.html
@@ -203,7 +203,7 @@
      </tr>
      <tr style="background-color:#f4f4f4;">
      <td>6</td>
-     <td style="text-align:left;"><a href="file:///C:/Users/sugiy/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/GitHub/team2-2/%E5%B7%A8%E4%BA%BA/%E9%81%B8%E6%89%8B/6.html">坂本　勇人</a></td>
+     <td style="text-align:left;"><a href="https://github.com/s1f10210126/team2-2/blob/main/%E5%B7%A8%E4%BA%BA/%E9%81%B8%E6%89%8B/6.html">坂本　勇人</a></td>
      <td>内野手</td>
      <td>1988/12/14</td>
      <td>34歳</td>
