--- a/ホーム.html
+++ b/ホーム.html
@@ -32,6 +32,7 @@
   <body aria-hidden="false" style="padding: 0px;">
   <div id="top"></div>
   <div id="container">
+    <img src="C:\Users\iniad\Downloads\phonto (2).jpg" alt="写真" width="500" height="130">
   
     <body aria-hidden="false" style="padding: 0px;">
       <div id="top"></div>
@@ -59,8 +60,8 @@
   
   
   <div style="border:1px solid #337; float:left; margin:10px 10px 0 0;">
-  <div class="st-hd" style="background:url(image/icon/ce.png) no-repeat 5px center; background-color:#4aaf6e;">セ・リーグ</div>
-  <table class="standings" style="background-color:#4aaf6e;" cellspacing="1">
+  <div class="st-hd" style="background:url(image/icon/ce.png) no-repeat 5px center; background-color:#32807a;">セ・リーグ</div>
+  <table class="standings" style="background-color:#32807a;" cellspacing="1">
   <tbody><tr>
   <th style="width:20px;text-align:center;">順</th>
   <th>チーム</th>
@@ -82,7 +83,7 @@
   <td>.622</td>
   <td>M21</td>
   </tr>
-  <tr style="background-color:#efd;">
+  <tr style="background-color:#fff;">
   <td style="text-align:center;">2</td>
   <td style="text-align:left;"><img src="https://baseball-data.com/image/icon/c.png" class="icon-team">広島</td>
   <td>117</td>
@@ -102,7 +103,7 @@
   <td>.509</td>
   <td>5.5</td>
   </tr>
-  <tr style="background-color:#efd;">
+  <tr style="background-color:#fff;">
   <td style="text-align:center;">4</td>
   <td style="text-align:left;"><img src="https://baseball-data.com/image/icon/g.png" class="icon-team">巨人</td>
   <td>114</td>
@@ -122,7 +123,7 @@
   <td>.420</td>
   <td>9.5</td>
   </tr>
-  <tr style="background-color:#efd;">
+  <tr style="background-color:#fff;">
   <td style="text-align:center;">6</td>
   <td style="text-align:left;"><img src="https://baseball-data.com/image/icon/d.png" class="icon-team">中日</td>
   <td>114</td>
@@ -164,7 +165,7 @@
   <div style="clear:both; float:left;width:470px;">
   <div style="width:450px;margin-bottom:15px;">
   <h2 class="h2-bar1" style="margin-bottom:5px;">球団別選手データ・成績</h2>
-  <table class="stats-menu" cellspacing="0" style="border:2px solid #4aaf6e; border-top:10px solid #4aaf6e;margin-bottom:5px;"><tbody><tr style="background-color:#fff;">
+  <table class="stats-menu" cellspacing="0" style="border:2px solid #32807a; border-top:10px solid #32807a;margin-bottom:5px;"><tbody><tr style="background-color:#fff;">
   <td style="width:90px;"><img src="https://baseball-data.com/image/icon/s.png" class="icon-team" alt="ヤクルト">ヤクルト</td>
   <td><a href="https://baseball-data.com/player/s/">選手一覧</a></td>
   <td><a href="https://baseball-data.com/stats/hitter-s/">打者成績</a></td>
@@ -257,7 +258,7 @@
   <table class="rank-menu" cellspacing="1">
   
   <tbody><tr>
-  <th rowspan="2" style="border:solid 3px #4aaf6e;"><img src="https://baseball-data.com/image/icon/ce.png" class="icon-team">セ･リーグ</th>
+  <th rowspan="2" style="border:solid 3px #32807a;"><img src="https://baseball-data.com/image/icon/ce.png" class="icon-team">セ･リーグ</th>
   <th>打者成績</th>
   <td><a href="https://baseball-data.com/stats/hitter-ce/">打率</a></td>
   <td><a href="https://baseball-data.com/stats/hitter-ce/hr-2.html">本塁打</a></td>
