--- a/ホーム.html
+++ b/ホーム.html
@@ -199,11 +199,11 @@
   </tr>
   <tr style="background-color:#fff;">
   <td style="width:90px;"><img src="https://baseball-data.com/image/icon/c.png" class="icon-team" alt="広島">広島</td>
-  <td><a href="https://baseball-data.com/player/c/">選手一覧</a></td>
-  <td><a href="https://baseball-data.com/stats/hitter-c/">打者成績</a></td>
-  <td><a href="https://baseball-data.com/stats/pitcher-c/">投手成績</a></td>
-  <td><a href="https://baseball-data.com/lineup/c.html">スタメン</a></td>
-  <td><a href="https://baseball-data.com/starter/c.html">先発</a></td>
+  <td><a href="C:\Users\iniad\Documents\team2\team2-2\広島\選手.html">選手一覧</a></td>
+  <td><a href="C:\Users\iniad\Documents\team2\team2-2\広島\打者.html">打者成績</a></td>
+  <td><a href="C:\Users\iniad\Documents\team2\team2-2\広島\投手.html">投手成績</a></td>
+  <td><a href="C:\Users\iniad\Documents\team2\team2-2\広島\スタメン.html">スタメン</a></td>
+  <td><a href="C:\Users\iniad\Documents\team2\team2-2\広島\先発.html">先発</a></td>
   </tr>
   <tr style="background-color:#eee;">
   <td style="width:90px;"><img src="https://baseball-data.com/image/icon/d.png" class="icon-team" alt="中日">中日</td>
